patches/userlit
Bottom: 7e6f8f6ca9418f08df788054edd543c90d9e08ec
Top:    bf988e688c74500591c28467bd63446959c1294e
Author: scott snyder <sss@karma>
Date:   2023-02-12 17:25:02 -0500

Fix warnings seen for user-defined literals.
Example:

constexpr double operator"" _degree(unsigned long long x) { 
  return 0.017453292519943295 * x;                   
}

void  TestTrackState()
{
  int foo  = 90_degree;
}


$ cppcheck  x.cc
Checking x.cc ...
x.cc:0:0: error: Internal Error. MathLib::toLongNumber: input was not completely consumed: 90_degree [cppcheckError]

^

This seems to have been reported:

https://trac.cppcheck.net/ticket/11438
